fix cart page button position on small screen

--- a/client/src/components/Cart.css
+++ b/client/src/components/Cart.css
@@ -19,3 +19,11 @@
     text-align: center;
     height: 200px;
 }
+
+.announceBtnSection {
+    height: 38px;
+}
+
+.cartBody {
+    padding-bottom: 120px;
+}
